<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/devices"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_devices" />

    <item
        android:id="@+id/type"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_type" />

    <item
        android:id="@+id/geofencing"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_geofencing" />
    <item
        android:id="@+id/schedule"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_schedule" />
    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_notifications" />

</menu>
